force-app/main/default/objects/Student_Program_Plan_Advisor__c.object
<CustomObject>
    <fields>
        <fullName>Advisor_Email__c</fullName>
        <description>(PeopleSoft) PS_EMAIL_ADDRESSES where type = ASU</description>
        <label>Advisor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Advisor_Id__c</fullName>
        <description>(PeopleSoft) PS_COMMITTEE_MEMBR.EMPLID PS_STDNT_ADVR_HIST.ADVISOR_ID</description>
        <label>Advisor ID</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisor_Name__c</fullName>
        <description>(PeopleSoft) PS_HCR_PERSON_NM.NAME_DISPLAY</description>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisor_Phone__c</fullName>
        <description>(PeopleSoft) PS_PERSONAL_PHONE where type = WORK</description>
        <label>Advisor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Advisor_Role__c</fullName>
        <description>(PeopleSoft) PS_COMMITTEE_MEMBR.COMMITTEE_ROLE
PS_STDNT_ADVR_HIST.ADVISOR_ROLE
psxlatitem.xlatlongname</description>
        <label>Advisor Role</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Match with EMPLID for an Advisor</description>
        <label>Advisor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Program Plan Advisors</relationshipLabel>
        <relationshipName>Student_Program_Plan_Advisors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Committee_Name__c</fullName>
        <description>(PeopleSoft) PS_COMMITTEE.DESCR</description>
        <label>Committee Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committee_Type__c</fullName>
        <description>(PeopleSoft) PS_COMMITTEE.COMMITTEE_TYPE</description>
        <label>Committee Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committee__c</fullName>
        <description>(PeopleSoft) PS_STDNT_ADVR_HIST.COMMITTEE_ID</description>
        <label>Committee</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Program_Plan__c</fullName>
        <description>(PeopleSoft) PS_STDNT_ADVR_HIST</description>
        <label>Student Program Plan</label>
        <referenceTo>Student_Program_Plan__c</referenceTo>
        <relationshipLabel>Student Program Plan Advisors</relationshipLabel>
        <relationshipName>Student_Program_Plan_Advisors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <description>[Peoplesoft] - Mixture of PS_ASU_SP_ACAD_ADV__x  , PS_STDNT_ADVR_HIST , and PS_COMMITTEE</description>
    <label>Student Program Plan Advisor</label>
    <nameField>
        <label>Student Program Plan Advisor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Program Plan Advisors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>