force-app/main/default/objects/Student_Program_Plan_Advisor__c/fields/Advisor_Department__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Department__c</fullName>
    <businessOwnerGroup>Data_Owner_Registrar</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(Peoplesoft) Name of Advisor's Department.
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Advisor Department</label>
    <length>30</length>
    <type>Text</type>
</CustomField>