force-app/main/default/objects/Student_Program_Plan_Advisor__c/fields/Advisor_Title__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Title__c</fullName>
    <businessOwnerGroup>Data_Owner_AA_Academic_Advising</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(Peoplesoft) Advisor's Title.
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Advisor Title</label>
    <length>30</length>
    <type>Text</type>
</CustomField>