force-app/main/default/objects/Student_Program_Plan_Advisor__c/fields/Business_Title__c.field-meta.xml
<CustomField>
    <fullName>Business_Title__c</fullName>
    <businessOwnerGroup>Data_Owner_AA_Academic_Advising</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(Peoplesoft) Business Title for committee member from PS table PS_ASU_AA_F_ADV_VW
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Business Title</label>
    <length>30</length>
    <type>Text</type>
</CustomField>