force-app/main/default/objects/Student_Program_Plan_Advisor__c/fields/Committee_Member_Attend_Method__c.field-meta.xml
<CustomField>
    <fullName>Committee_Member_Attend_Method__c</fullName>
    <businessOwnerGroup>Data_Owner_AA_Academic_Advising</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(Peoplesoft) ASU_AA_DFS_ATTND from PS_ASU_AA_POS_ADV translated to XLATLONGNAME on PSXLATITEM
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Committee Member Attend Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>