force-app/main/default/objects/Student_Program_Plan_Advisor__c/fields/Company_Description__c.field-meta.xml
<CustomField>
    <fullName>Company_Description__c</fullName>
    <businessOwnerGroup>Data_Owner_AA_Academic_Advising</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(PeopleSoft) PS_ASU_AA_F_ADV_VW.COMPANY_DESCR
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Company Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>